rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__dimension_deps__active_mask_reading_a_grouped_dimension_plans.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/dimension_deps.rs
expression: result
---
orders__category | orders__created_at_month | orders__amount_masked_by_category_in_grain
-----------------+--------------------------+-------------------------------------------
books            | 2024-01-01 00:00:00      | -1                                        
books            | 2024-02-01 00:00:00      | -1                                        
books            | 2024-03-01 00:00:00      | -1                                        
clothing         | 2024-01-01 00:00:00      | 0                                         
clothing         | 2024-02-01 00:00:00      | 0                                         
clothing         | 2024-03-01 00:00:00      | 0                                         
electronics      | 2024-01-01 00:00:00      | 0                                         
electronics      | 2024-02-01 00:00:00      | 0                                         
electronics      | 2024-03-01 00:00:00      | 0
