rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__dimension_deps__dimension_derived_from_a_grain_dimension_is_not_reported.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/dimension_deps.rs
expression: result
---
orders__category | orders__created_at_month | orders__amount_by_category_label
-----------------+--------------------------+---------------------------------
books            | 2024-02-01 00:00:00      | 150.00                          
books            | 2024-01-01 00:00:00      | 230.00                          
books            | 2024-03-01 00:00:00      | 500.00                          
clothing         | 2024-02-01 00:00:00      | 0                               
clothing         | 2024-01-01 00:00:00      | 0                               
clothing         | 2024-03-01 00:00:00      | 0                               
electronics      | 2024-01-01 00:00:00      | 0                               
electronics      | 2024-03-01 00:00:00      | 0                               
electronics      | 2024-02-01 00:00:00      | 0
