rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__dimension_deps__dimension_in_the_query_grain_is_not_reported.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/dimension_deps.rs
expression: result
---
orders__status | orders__created_at_month | orders__completed_amount_multi_stage
---------------+--------------------------+-------------------------------------
cancelled      | 2024-02-01 00:00:00      | 0                                   
cancelled      | 2024-01-01 00:00:00      | 0                                   
cancelled      | 2024-03-01 00:00:00      | 0                                   
completed      | 2024-02-01 00:00:00      | 500.00                              
completed      | 2024-01-01 00:00:00      | 300.00                              
completed      | 2024-03-01 00:00:00      | 600.00                              
pending        | 2024-01-01 00:00:00      | 0                                   
pending        | 2024-03-01 00:00:00      | 0                                   
pending        | 2024-02-01 00:00:00      | 0
