rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__dimension_deps__dimension_read_only_by_drill_filters_is_not_reported.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/dimension_deps.rs
expression: result
---
orders__created_at_month | orders__amount_with_drill_filters
-------------------------+----------------------------------
2024-01-01 00:00:00      | 500.00                           
2024-02-01 00:00:00      | 750.00                           
2024-03-01 00:00:00      | 1000.00
